--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,12 +7,32 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="vigroid.iperf3ericsson.MainActivity" >
-
+	<!-- 
     <TextView
         android:id="@+id/mainTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+ 	-->
+ 	<LinearLayout
+ 	android:id="@+id/chart"
+ 	android:layout_width="match_parent"
+ 	android:layout_height="wrap_content"
+ 	android:layout_alignParentLeft="true"
+ 	android:layout_above="@+id/drawGraphButton"
+ 	tools:ignore="Orientation" >
+
+	</LinearLayout>
+
+    <Button
+        android:id="@+id/runTestButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/chart"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="42dp"
+        android:layout_marginLeft="32dp"
+        android:text="@string/Run_iPerf_English" />
 
     <Button
         android:id="@+id/drawGraphButton"
@@ -20,18 +40,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/runTestButton"
         android:layout_alignBottom="@+id/runTestButton"
-        android:layout_marginLeft="59dp"
-        android:layout_toRightOf="@+id/runTestButton"
+        android:layout_alignRight="@+id/chart"
+        android:layout_marginRight="31dp"
         android:text="@string/Draw_Graph" />
-
-    <Button
-        android:id="@+id/runTestButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/mainTV"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="41dp"
-        android:layout_marginLeft="29dp"
-        android:text="@string/Run_iPerf_English" />
 
 </RelativeLayout>
