Addtional DB work, support added for CSV export.

--- a/res/layout/activity_test_history.xml
+++ b/res/layout/activity_test_history.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <GridView android:layout_height="wrap_content" android:id="@+id/gridView1"
-        android:layout_width="match_parent" android:numColumns="3"></GridView>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <GridView
+        android:id="@+id/gridView1"
+        android:layout_width="match_parent"
+        android:layout_height="361dp"
+        android:layout_weight="0.06"
+        android:numColumns="3" >
+    </GridView>
+
+    <Button
+        android:id="@+id/exportButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/exportDB" />
+
 </LinearLayout>
