Fixed continuous test, fixed potential bugs with detail view. UI changes to history view for readability

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -34,17 +34,6 @@
         android:text="@string/summary_button" />
 
     <Button
-        android:id="@+id/runMultipleTests"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/drawGraphButton"
-        android:layout_alignBottom="@+id/drawGraphButton"
-        android:layout_marginRight="24dp"
-        android:layout_toLeftOf="@+id/summaryButton"
-        android:text="Continuous" />
-
-    <Button
         android:id="@+id/drawGraphButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,5 +42,24 @@
         android:layout_marginRight="14dp"
         android:layout_toLeftOf="@+id/button1"
         android:text="@string/run_iperf_button" />
+
+    <Button
+        android:id="@+id/runMultipleTests"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/drawGraphButton"
+        android:layout_below="@+id/summaryButton"
+        android:text="Continuous Tests" />
+
+    <Button
+        android:id="@+id/stopTestsButton"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/drawGraphButton"
+        android:layout_alignBottom="@+id/drawGraphButton"
+        android:layout_toRightOf="@+id/drawGraphButton"
+        android:text="Stop Tests" />
 
 </RelativeLayout>
